navbar is fixed on top with height of 60px so i added margin 60 top in DetailCard comp to align it

--- a/Frontend/src/landing-page/home/Home.css
+++ b/Frontend/src/landing-page/home/Home.css
@@ -68,7 +68,7 @@
     /* navbar */
     
     .nav-input {
-        border-radius: 10rem !important;
+        border-radius: 20rem !important;
     }
     
     .nav-btn {
@@ -94,6 +94,7 @@
         width: 100%;
         z-index: 100;
         height: 60px;
+        /* margin-bottom: 10px; */
     }
     
     .filtericons {
